--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,206 @@
-/* Compile your LESS file! */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+@font-face {
+  font-family: 'Roboto Mono';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local('Roboto Mono'), local('RobotoMono-Regular'), url(https://fonts.gstatic.com/s/robotomono/v7/L0x5DF4xlVMF-BfR8bXMIjhLq3o.ttf) format('truetype');
+}
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 1px solid lightgreen;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+  max-width: 970px;
+  margin: 0 auto;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+/* Set every element's box-sizing to border-box */
+* {
+  box-sizing: border-box;
+}
+html,
+body {
+  height: 100%;
+}
+/*Mixins*/
+/*variables*/
+/*Header section styling*/
+header {
+  display: flex;
+  justify-content: space-between;
+  background-color: #C2F9BB;
+  font-family: 'Roboto Mono', monospace;
+  text-shadow: 2px 2px 2px #888;
+}
+header h1 {
+  text-align: center;
+  font-size: 5em;
+}
+header nav {
+  width: 55%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #9AD1D4;
+}
+header nav a {
+  font-size: 1.5em;
+  text-decoration: none;
+  color: #20063B;
+}
+.title-img {
+  display: flex;
+  justify-content: space-evenly;
+  background: #9AD1D4;
+}
+.title-img img {
+  width: 25%;
+  border-radius: 50%;
+}
+.title-img P {
+  text-shadow: 2px 2px 2px #888;
+  font-size: 2em;
+  width: 35%;
+}
+/*About section*/
+.about-section {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  text-shadow: 2px 2px 2px #888;
+}
+.about-me p {
+  background-color: #9AD1D4;
+  width: 30%;
+  font-size: 1.5em;
+}
+.about-me h2 {
+  background-color: #C2F9BB;
+  font-size: 2em;
+  width: 30%;
+}
+.skills h2 {
+  background-color: #C2F9BB;
+  font-size: 2em;
+}
