--- a/less/index.less
+++ b/less/index.less
@@ -4,6 +4,10 @@
    License: none (public domain)
 */
 
+//imports
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap');
+
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -19,7 +23,7 @@ menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
 	padding: 0;
-	border: 0;
+	border: 1px solid lightgreen;
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
@@ -31,6 +35,8 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	max-width: 970px;
+	margin: 0 auto;
 }
 ol, ul {
 	list-style: none;
@@ -54,6 +60,103 @@ table {
 }
 
 html, body {
-    height: 100%;
+	height: 100%;
+}
+
+/*Mixins*/
+
+.round-img() {
+	border-radius: 50%;
+}//round-img closes here
+
+.background-color() {
+	background: #9AD1D4;
+}//background-color closes here
+
+.text-shadow() {
+	text-shadow: 2px 2px 2px #888;
+}
+
+/*variables*/
+
+@main-font: 'Roboto Mono', monospace;
+
+@heading-background: #C2F9BB;
+@content-background: #9AD1D4;
+
+/*Header section styling*/
+
+header {
+	display: flex;
+	justify-content: space-between;
+	background-color: @heading-background;
+	font-family: @main-font;
+	.text-shadow();
+
+	h1 {
+		text-align: center;
+		font-size: 5em;
+	}//header h1 closes here
+
+	nav {
+		width: 55%;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		background-color: @content-background;
+	}//nav closes here
+
+	nav a {
+		font-size: 1.5em;
+		text-decoration: none;
+		color: #20063B;
+	}//nav a closes here
+}//header closes here
+
+.title-img {
+	display: flex;
+	justify-content: space-evenly;
+	.background-color();
+	img {
+		width: 25%;
+	.round-img();
+	}//img closes here
+
+	P {
+		.text-shadow();
+		font-size: 2em;
+		width: 35%;
+	}//p closes here
+}//title-img closes here
+
+/*About section*/
+
+.about-section {
+	display: flex;
+	width: 100%;
+	justify-content: center;
+	.text-shadow();
+}//about section ends here
+
+.about-me {
+	
+	 p {
+		 background-color: @content-background;
+		width: 30%;
+		font-size: 1.5em;
+	}//p closes here
+
+	h2 {
+		background-color: @heading-background;
+		font-size: 2em;
+		width: 30%;
+	}//h2 closes here
+}//.about-me ends here
+
+.skills {
+	h2 {
+		background-color: @heading-background;
+		font-size: 2em;
+	}
 }
 
