--- a/css/index.css
+++ b/css/index.css
@@ -246,4 +246,22 @@ header nav a {
 footer {
   display: flex;
   width: 100%;
+  background-color: #9AD1D4;
+}
+footer .contact {
+  width: 100%;
+}
+footer h2 {
+  text-align: center;
+  font-size: 1.5em;
+  padding: 3% 0;
+  background-color: #C2F9BB;
+  border: 3px inset #9AD1D4;
+}
+footer h3 {
+  text-align: center;
+  font-size: 1.5em;
+}
+footer p {
+  text-align: center;
 }
