--- a/less/index.less
+++ b/less/index.less
@@ -88,10 +88,10 @@ html, body {
 
 header {
 	display: flex;
-	justify-content: space-between;
 	background-color: @heading-background;
 	font-family: @main-font;
 	.text-shadow();
+
 
 	h1 {
 		text-align: center;
@@ -112,8 +112,27 @@ header {
 		text-decoration: none;
 		color: #20063B;
 	}//nav a closes here
+
+	@media(max-width: 500px){
+		flex-direction: column;
+		display: flex;
+		
+		h1 {
+			width: 100%;
+		}
+
+		nav {
+			display: flex;
+			width: 100%;
+		}
+
+		nav a {
+			justify-content: space-between;
+		}
+	}//@media closes here
 }//header closes here
 
+/*Here goes the image and intro*/
 .title-img {
 	display: flex;
 	justify-content: space-evenly;
@@ -129,12 +148,25 @@ header {
 		width: 35%;
 		text-align: center;
 	}//p closes here
+
+	@media (max-width: 500px){
+		
+		img {
+			width: 65%;
+		}
+	}//media closes here
 }//title-img closes here
 
 /*middle section*/
 
 .middle-section {
 	display: flex;
+
+	@media(max-width: 500px){
+		flex-wrap: wrap;
+		flex-direction: column;
+		width: 100%;
+	}
 }
 
 .about-me {
@@ -152,9 +184,15 @@ header {
 		font-size: 1.9em;
 		background-color: @content-background;
 	}//p ends here
+
+	@media(max-width: 500px){
+		width: 100%;
+	}
+	
 }//.about-me ends here
 
 .my-skills {
+	
 	width: 50%;
 	display: flex;
 	flex-direction: column;
@@ -172,7 +210,13 @@ header {
 		background-color: @content-background;
 		margin-top: 9%;
 	}//p closes here
+
+	@media(max-width: 500px){
+		width: 100%;
+	}
+
 }//my-skills closes here
+
 
 /*Work History*/
 
